fixed page "jumping" if most sliders on 100%

--- a/src/scss/_output.scss
+++ b/src/scss/_output.scss
@@ -23,6 +23,7 @@
     padding: 0.5em 0.625em;
     border-radius: 2px;
     margin-bottom: 0.5em;
+    height: 2.5em;
   }
 
   &__button {
